# backend/app/Models/User.php
@@ -22,6 +22,9 @@ class User extends Authenticatable implements JWTSubject
         'name',
         'email',
         'password',
+        'phone',
+        'img_url',
+        'role_id'
     ];
 
     /**
